human_written_tests/WebAssembly/processed_control_flow_validation/test_block_22.wast
(assert_invalid
  (module (func $type-value-empty-vs-i32 (result i32)
    (block (result i32))
  ))
  "type mismatch"
)